--- a/index.html
+++ b/index.html
@@ -316,10 +316,12 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <p class="card-text">With 10 years of experience were there are busy preoccupied with
-                                    whether or not they could they didn't stop to think.</p>
-                                <h5>Garrett Patton</h5>
-                                <h6>Founder & CEO at Luova Studio</h6>
+                                <p class="card-text">I rarely came across real talents who stand out like Talha. I had
+                                    pleasure of working with Talha on Online Marketplace Web & Mobile apps design.
+                                    Though you may have a high level understandings of your outcomes, he knows how to
+                                    delve in and optimise your concept to create amazing outcomes. “Genuine Expert” is
+                                    the phrase that comes to my mind when I think about Talha.</p>
+                                <h6>Zeeshan Wajid</h6>
                             </div>
                         </div>
                         <div class="card advice_c wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".3s">
@@ -338,10 +340,12 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <p class="card-text">With 10 years of experience were there are busy preoccupied with
-                                    whether or not they could they didn't stop to think.</p>
-                                <h5>Garrett Patton</h5>
-                                <h6>Founder & CEO at Luova Studio</h6>
+                                <p class="card-text">Talha delivered an amazing app design for our project and I enjoyed
+                                    working with him. His communication was great, he created a great design, his skills
+                                    were sufficient, he was highly flexible/cooperative, he has an average response time
+                                    of 1-35 minutes (based on my experience with him and if he is awake and working),
+                                    and overall a great designer. I would recommend him."</p>
+                                <h6>Talal</h6>
                             </div>
                         </div>
                         <div class="card advice_c wow fadeInUp" data-wow-duration=".9s" data-wow-delay=".3s">
@@ -360,10 +364,9 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <p class="card-text">With 10 years of experience were there are busy preoccupied with
-                                    whether or not they could they didn't stop to think.</p>
-                                <h5>Garrett Patton</h5>
-                                <h6>Founder & CEO at Luova Studio</h6>
+                                <p class="card-text">Quality work and to the point delivery. Glad to work with you. Will
+                                    surely start next project with you very soon.</p>
+                                <h6>Ashish</h6>
                             </div>
                         </div>
                     </div>
