Website Name Update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
 
 <head>
-    <title> Resume-White </title>
+    <title> Talha's Portfolio </title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
