Updated with Development Portfolio

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="resume-home-inner wow fadeInUp">
                             <span class="span"></span>
                             <h2 class="btn-sss" data-text="Hello, I’m Talha!">Hello, I’m Talha!</h2>
-                            <h4>A <span>Professional UI/UX Designer</span>, passionate About Solving Complex Problems
+                            <h4>A <span>Professional E-commerce Developer</span>, passionate About Designing Modern Websites
                             </h4>
                         </div>
                     </div>
@@ -117,15 +117,15 @@
                                         <div class="resume-title wow fadeInUp">
                                             <h5>know Myself</h5>
                                             <h1>About me</h1>
-                                            <p>I am a passionate, selft taught UI/UX & Graphics Designer with a strong
-                                                zeal to work with emerging startups. I've learned to Design through hard
-                                                work and perseverance. Creative Web/Mob designer dedicated to building
+                                            <p>I am a passionate, selft taught E-commerce Developer with a strong eye towards UI/UX & Graphics Designing.
+                                                I've experience creating websites in Wordpress, Shopify, Webflow and Wix. I've learned to Design through hard
+                                                work and perseverance. Creative & Responsive Website designer dedicated to building
                                                 and optimizing the performance of high impact websites for nationwide
                                                 companies. Experienced with more than 3 years creating different types
-                                                of websites. Creative and modern Web and App designing</p>
+                                                of websites.</p>
                                             <div class="resume-btn">
                                                 <div class="btn-default">
-                                                    <a href="#" class="cta">
+                                                    <a href="#Contact" class="cta">
                                                         <span>Contact Us</span>
                                                         <svg width="13px" height="10px" viewBox="0 0 13 10">
                                                             <path d="M1,5 L11,5"></path>
@@ -167,29 +167,29 @@
                             <div class="col-md-4">
                                 <div class="resume-do-icon">
                                     <img src="assets/images/do-1.svg" alt="" class="img-fluid">
-                                    <h5>UX design</h5>
+                                    <h5>UI/UX</h5>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="resume-do-icon">
                                     <img src="assets/images/do-2.svg" alt="" class="img-fluid">
-                                    <h5>UI design</h5>
+                                    <h5>Wordpress</h5>
                                 </div>
                             </div>
                             <div class="col-md-4">
                                 <div class="resume-do-icon">
                                     <img src="assets/images/do-3.svg" alt="" class="img-fluid">
-                                    <h5>Branding</h5>
+                                    <h5>Shopify</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>  
                 <div class="col-md-7">
                     <div class="bg-title wow fadeInUp" id="example">
                         <h1>I Create Unique User Experience</h1>
-                        <h1>Unique User Interface Design</h1>
-                        <h1>Web and Mobile Design</h1>
+                        <h1>Wordpress & Shopify Development</h1>
+                        <h1>Professional E-commerce Store</h1>
                     </div>
                 </div>
             </div>
@@ -216,22 +216,23 @@
                         <div class="row">
                             <div class="col-md-5">
                                 <div class="resume-img wow fadeInUp">
-                                    <h5>Luxury Ride</h5>
-                                    <h6>Mobile App Design</h6>
-                                    <div class="image-one relative">
+                                    <h5>Germaid</h5>
+                                    <h6>Wordpress Website</h6>
+                                    <div class="image-one relative"> <a href="https://germaid.com.au">
                                         <div class="reveal-image">
                                             <img src="assets/images/case-study-1.png" alt="" class="img-fluid">
                                         </div>
                                         <div class="resume-image-inner">
                                         </div>
+                                    </a>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-5 ml-auto">
                                 <div class="resume-img mt_180 wow fadeInUp">
-                                    <h5>Broker Landing Page</h5>
-                                    <h6>Landing Page Design</h6>
-                                    <div class="image-two relative">
+                                    <h5>DAIG - Online Catering</h5>
+                                    <h6>Shopify Website</h6>
+                                    <div class="image-two relative"> <a href="https://www.daig.com.pk">
                                         <div class="reveal-image">
                                             <img src="assets/images/case-study-2.png" alt="" class="img-fluid">
                                         </div>
@@ -241,13 +242,14 @@
                                             <div class="resume-btn">
                                             </div>
                                         </div>
+                                    </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-11 mx-auto">
+                <!-- <div class="col-md-11 mx-auto">
                     <div class="resume-portfolio-inner inner-2">
                         <div class="row">
                             <div class="col-md-5">
@@ -280,7 +282,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
